--- a/.env.example
+++ b/.env.example
@@ -65,3 +65,8 @@ VITE_APP_NAME="${APP_NAME}"
 
 HODOWLA_API_BASE_URL=https://example-hodowla-api.local
 HODOWLA_API_TIMEOUT=10
+HODOWLA_API_TOKEN=
+
+SEED_ADMIN_EMAIL=admin@dziennik.local
+SEED_ADMIN_NAME=Admin
+SEED_ADMIN_PASSWORD=Admin12345!
